syntax = "proto3";

package duplicatepb;

option go_package = "github.com/salrashid123/go-tpm-wrapping/tpmwrappb";

/*
$ protoc --version
   libprotoc 3.21.12

$ go install google.golang.org/protobuf/cmd/protoc-gen-go@latest

$ protoc -I ./ --include_imports \
   --experimental_allow_proto3_optional --include_source_info \
   --descriptor_set_out=duplicatepb/wrap.proto.pb  \
   --go_out=paths=source_relative:. duplicatepb/wrap.proto
*/

message Secret {
  string name = 1;
  int32 version = 2;
  KeyType type = 3; 
  enum KeyType {
    ECC = 0;
    RSA = 1;
    HMAC = 2;
    AES = 3;        
  }
  ParentKeyType parentKeyType = 4;
  enum ParentKeyType {
    EKECC = 0;
    EKRSA = 1;      
  }  
  repeated PCRS pcrs = 5;  
  Key key = 6;
  repeated bytes authValue = 7;
}

message PCRS {
  int32 pcr = 1;
  bytes value = 2;
}

message Key {
  string name = 1;
  string parentName = 2;
  bool emptyAuth = 3;
  bytes dupPub = 4;
  bytes dupDup = 5;
  bytes dupSeed = 6;
}
